--- a/GUI - WPF/GUI - WPF.csproj
+++ b/GUI - WPF/GUI - WPF.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>Minesweeper_3D_WPF</RootNamespace>
+    <RootNamespace>Minesweeper3D.WPF</RootNamespace>
     <UseWPF>true</UseWPF>
     <AssemblyName>Minesweeper 3D GUI</AssemblyName>
     <StartupObject>Minesweeper_3D_WPF.App</StartupObject>
