--- a/GUI - WPF/GUI - WPF.csproj
+++ b/GUI - WPF/GUI - WPF.csproj
@@ -156,4 +156,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <EditorConfigFiles Remove="D:\.Programming\C#\Minesweeper 3D\.editorconfig" />
+  </ItemGroup>
+
 </Project>
