--- a/GUI - WPF/GUI - WPF.csproj
+++ b/GUI - WPF/GUI - WPF.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows7.0</TargetFramework>
     <RootNamespace>Minesweeper3D.WPF</RootNamespace>
     <UseWPF>true</UseWPF>
     <AssemblyName>Minesweeper 3D GUI</AssemblyName>
